debugging ZhuHayes