@@ -92,32 +92,12 @@
  </dependencies>
  <build>
   <plugins>
-  <!-- 
-   <plugin>
-    <groupId>org.codehaus.mojo</groupId>
-    <artifactId>exec-maven-plugin</artifactId>
-    <version>1.6.0</version>
-    <executions>
-     <execution>
-      <id>run-benchmarks</id>
-      <phase>integration-test</phase>
-      <goals>
-       <goal>exec</goal>
-      </goals>
-      <configuration>
-       <classpathScope>test</classpathScope>
-       <executable>java</executable>
-       <arguments>
-        <argument>-classpath</argument>
-        <classpath />
-        <argument>org.openjdk.jmh.Main</argument>
-        <argument>.*</argument>
-       </arguments>
-      </configuration>
-     </execution>
-    </executions>
-   </plugin>
-    -->
+   <!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>exec-maven-plugin</artifactId> 
+    <version>1.6.0</version> <executions> <execution> <id>run-benchmarks</id> <phase>integration-test</phase> 
+    <goals> <goal>exec</goal> </goals> <configuration> <classpathScope>test</classpathScope> 
+    <executable>java</executable> <arguments> <argument>-classpath</argument> <classpath 
+    /> <argument>org.openjdk.jmh.Main</argument> <argument>.*</argument> </arguments> 
+    </configuration> </execution> </executions> </plugin> -->
    <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
@@ -132,7 +112,7 @@
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-shade-plugin</artifactId>
     <version>2.2</version>
-    <!-- <version>3.2.0</version>  -->
+    <!-- <version>3.2.0</version> -->
     <executions>
      <execution>
       <phase>package</phase>
@@ -176,19 +156,19 @@
     </plugin>
     <plugin>
      <artifactId>maven-install-plugin</artifactId>
-     <version>2.5.1</version>
+     <version>3.0.0-M1</version>
     </plugin>
     <plugin>
      <artifactId>maven-jar-plugin</artifactId>
-     <version>2.4</version>
+     <version>3.1.1</version>
     </plugin>
     <plugin>
      <artifactId>maven-javadoc-plugin</artifactId>
-     <version>2.9.1</version>
+     <version>3.1.0</version>
     </plugin>
     <plugin>
      <artifactId>maven-resources-plugin</artifactId>
-     <version>2.6</version>
+     <version>3.1.0</version>
     </plugin>
     <plugin>
      <artifactId>maven-site-plugin</artifactId>
@@ -196,12 +176,24 @@
     </plugin>
     <plugin>
      <artifactId>maven-source-plugin</artifactId>
-     <version>2.2.1</version>
+     <version>3.0.1</version>
     </plugin>
     <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-surefire-plugin</artifactId>
      <version>3.0.0-M2</version>
-     <!-- <version>2.17</version> -->
+     <configuration>
+      <trimStackTrace>false</trimStackTrace>
+      <!-- argLine>-Xmx2G -XX:MaxPermSize=512M</argLine -->
+      <argLine>-Xmx4G -Xms4G</argLine>
+     </configuration>
+     <dependencies>
+      <dependency>
+       <groupId>org.junit.jupiter</groupId>
+       <artifactId>junit-jupiter-engine</artifactId>
+       <version>5.4.1</version>
+      </dependency>
+     </dependencies>
     </plugin>
    </plugins>
   </pluginManagement>
